# easyclimate

./: .buildinfo  .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_ja_JP.md  README_zh_CN.md  changes.html  command_pytest.ps1  command_pytest.sh  contributing.html  create_baseline_images.ps1  create_baseline_images.sh  delete_pycache.py  genindex.html  index.html  install.html  name_list.txt  objects.inv  overview.html  py-modindex.html  pyproject.toml  release_requirements.txt  requirements.txt  search.html  searchindex.js  setup.cfg  sg_execution_times.html  sponsor.html  test_requirements.txt
.binder/: environment.yml  plot_geographic_finite_difference.ipynb
.github/workflows/: ci.yaml  (+9 more)
_autosummary/: easyclimate.html
_sources/: changes.md  index.rst  install.rst  overview.rst  sg_execution_times.rst  sponsor.rst
_static/: documentation_options.js
api_index/: index.html
auto_gallery/: index.html  plot_aerobulk.html  plot_ao_index.html  plot_barnes_filter.html  plot_basic_eof.html  plot_basic_statistical_analysis.html  plot_co_coeff.html  plot_corr_reg.html  plot_da_bbo.html  plot_emd.html  plot_formatting_coordinates.html  plot_geographic_finite_difference.html  plot_interp.html  plot_interp_mesh2point.html  plot_kf_filter.html  plot_mjo_phase.html  plot_monsoon_npwi.html  plot_multi_linear_reg.html  plot_multieof.html  plot_ocean_mix_layer.html  plot_ocean_stability.html  plot_oceanic_front.html  plot_redfit.html  plot_satellite_data_analysis.html  plot_smooth_daily_cycle.html  plot_spatial_pcf.html  plot_taylor_diagram.html  plot_tc_track_axis.html  plot_tcpv.html  plot_thermal_layer.html  plot_time_scale_average.html  plot_wavelet.html  plot_wet_bulk.html  plot_wk_spectra.html  plot_wrf_tutorial.html  sg_execution_times.html
auto_gallery_output/: index.html  plot_basic_statistical_analysis.html  plot_formatting_coordinates.html  plot_geographic_finite_difference.html  plot_interp.html  plot_taylor_diagram.html  plot_time_scale_average.html  plot_wrf_tutorial.html  sg_execution_times.html
docs/: .buildinfo  build_docs_linux.sh  build_docs_windows.ps1  changes.html  clean.ps1  clean.sh  clean_all.ps1  clean_all.sh  clean_build.ps1  clean_build.sh  copy_ipynb2example.ps1  copy_ipynb2example.sh  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  requirements.txt  search.html  searchindex.js
dynamic_docs/: README.html
readme/: README.ja_JP.md  README.zh_CN.md
scripts/: README_ja_JP.md  README_zh_CN.md  build_wheel.ps1  build_wheel.sh  check_deprecations.py  command_pytest.ps1  command_pytest.sh  command_pytest_distributed.ps1  command_pytest_distributed.sh  command_pytest_report.ps1  command_pytest_report.sh  create_baseline_images.ps1  create_baseline_images.sh  delete_pycache.ps1  delete_pycache.py  upload_pypi.ps1  upload_pypi.sh
sphinx_docs/: book.yaml  copy2docs.bat
static_docs/: air_sea_interaction.html  cite.html  land.html  mesoscale.html  monsoon.html  ocean.html  product_table.html  subproducts.html  teleconnections.html  typhoons.html
test/: __init__.py  const_data.py  const_define.py  run_pytest_codecov.bat  test_air_sea_interaction_index_IOD.py  test_air_sea_interaction_index_amm.py  test_air_sea_interaction_index_atlantic_nino.py  test_air_sea_interaction_index_enso.py  test_air_sea_interaction_index_iobm.py  test_core_datanode.py  test_core_diagnosis.py  test_core_diff.py  test_core_eddy.py  test_core_eof.py  test_core_extract.py  test_core_mk__test.py  test_core_monthstat.py  test_core_normalized.py  test_core_read.py  test_core_spharm.py  test_core_stat.py  test_core_stat_calc_lead_lag_correlation_coefficients.py  test_core_stat_calc_timeseries_correlations.py  test_core_stat_corr_spatial.py  test_core_stat_multiple_linear_reg.py  test_core_units.py  test_core_utility.py  test_core_utility1.py  test_core_utility2.py  test_core_variability.py  test_core_variability1.py  test_core_windspharm.py  test_core_yearstat.py  test_diagnosis.py  test_field_air_sea_interaction_index_amm.py  (+87 more)
(+1226 files in other folders)
