[metadata]
name = easyclimate
version = 0.0.1
author = shenyulu
description = understand climate more easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shenyulu/easyclimate
project_urls =
    Bug Tracker = https://github.com/shenyulu/easyclimate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.18
    xarray >= 0.17.0
    scipy >= 1.5.1

[options.packages.find]
where = src