[metadata]
name = easyclimate
version = 2023.04.01
author = shenyulu
description = understand climate more easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shenyulu/easyclimate
project_urls =
    Bug Tracker = https://github.com/shenyulu/easyclimate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy >= 1.24.3
    xarray >= 0.17.0
    scipy >= 1.5.1
    geocat.viz >= 2021.8.0
    cartopy >= 0.20
    cmaps >= 1.0.5
    fast-barnes-py >= 1.0.0
    oceans >= 1.0.0
    intel-fortran-rt>=2023.1.0
    scipy >= 0.18.0
    geocat-comp >=2023.6.1
    xeofs >= 1.1.0
    pyspharm-syl
    flox
    xarray-datatree
    xarray_regrid

[options.packages.find]
where = src