[metadata]
name = easyclimate
version = 2023.04.01
author = shenyulu
description = A line of code to analyze climate
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shenyulu/easyclimate
project_urls =
    Bug Tracker = https://github.com/shenyulu/easyclimate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy >= 1.24.3
    xarray >= 0.17.0
    geocat.viz <= 2023.09.0
    cartopy >= 0.20
    xeofs >= 1.1.0
    matplotlib
    fast-barnes-py
    oceans
    intel-fortran-rt
    scipy
    statsmodels
    geocat-comp
    pyspharm-syl
    dask
    pandas
    pymannkendall
    flox
    xarray-datatree
    xarray_regrid 

[options.packages.find]
where = src